--- a/public/index.html
+++ b/public/index.html
@@ -738,8 +738,8 @@
             <div class="footer-col">
                 <h4>Produk</h4>
                 <ul>
-                    <li><a href="#">Short Link</a></li>
-                    <li><a href="#">Image Upload</a></li>
+                    <li><a href="#tabShortener">Short Link</a></li>
+                    <li><a href="#tabUpload">Image Upload</a></li>
                 </ul>
             </div>
             <div class="footer-col">
