--- a/public/index.html
+++ b/public/index.html
@@ -753,8 +753,8 @@
             <div class="footer-col">
                 <h4>Hubungi</h4>
                 <ul>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Email Kami</a></li>
+                    <li><a href="support.html">Support</a></li>
+                    <li><a href="https://wa.me/6285894955362" target="_blank">WhatsApp Kami</a></li>
                     <li><a href="#">Telegram</a></li>
                 </ul>
             </div>
