--- a/public/support.html
+++ b/public/support.html
@@ -631,7 +631,7 @@
         // --- KONFIGURASI APLIKASI ---
         const config = {
             // URL QRIS ASLI ANDA (STATIS) - TIDAK AKAN DIMODIFIKASI
-            qrisImageUrl: 'https://i.ibb.co.com/hFm0cLbw/qr-Farid-dewangga-26-09-23-1695698726.jpg',
+            qrisImageUrl: 'qr8.jpg',
             
             // WhatsApp admin
             whatsappNumber: '6285894955362',
