--- a/public/support.html
+++ b/public/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SANN WEB PAYMENT</title>
+    <title>JHON WEB PAYMENT</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -617,7 +617,7 @@
         // --- KONFIGURASI APLIKASI ---
         const config = {
             // URL QRIS ASLI ANDA
-            qrisImageUrl: 'https://i.ibb.co.com/hFm0cLbw/qr-Farid-dewangga-26-09-23-1695698726.jpg',
+            qrisImageUrl: 'qr8.jpg',
             
             // WhatsApp admin
             whatsappNumber: '6285894955362',
